--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   latlong2: ^0.9.0
   shimmer: ^3.0.0
   percent_indicator: ^4.2.5
+  image_picker: ^1.1.2 
+  firebase_storage: 11.7.7 
+  permission_handler: ^11.3.1 
 dev_dependencies:
   flutter_test:
     sdk: flutter
