--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
 
   # Funcionalidades
   provider: ^6.1.2
-  intl: ^0.19.0
+  intl: 0.20.2
   mask_text_input_formatter: ^2.9.0
   fl_chart: ^0.68.0
   geolocator: ^11.1.0
@@ -38,8 +38,15 @@ dependencies:
   shimmer: ^3.0.0
   percent_indicator: ^4.2.5
   image_picker: ^1.1.2 
-  firebase_storage: 11.7.7 
-  permission_handler: ^11.3.1 
+  firebase_storage: ^11.7.7
+  permission_handler: ^11.3.1
+  google_mlkit_text_recognition: ^0.15.0
+  http: ^1.4.0 
+  url_launcher: ^6.3.2
+  google_sign_in: ^6.2.1
+  flutter_stripe: ^11.5.0
+  cloud_functions: ^4.7.1 
+  file_picker: ^8.0.0+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -49,3 +56,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+ 
