--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,48 +12,48 @@ dependencies:
   flutter_localizations: 
     sdk: flutter
 
-  # Firebase
-  firebase_core: ^2.32.0 
-  firebase_auth: ^4.20.0
-  cloud_firestore: ^4.17.5
+  # Firebase (VERSÕES ATUALIZADAS)
+  firebase_core: ^3.15.1
+  firebase_auth: ^5.6.2
+  cloud_firestore: ^5.6.11
+  firebase_storage: ^12.4.9
+  cloud_functions: ^5.6.1
 
-  # UI e Estilo
+  # UI e Estilo (VERSÕES ATUALIZADAS)
   google_fonts: ^6.2.1
   flutter_animate: ^4.5.0
   flutter_spinkit: ^5.2.1
   animated_text_kit: ^4.2.2
-  lottie: ^3.0.0
-  audioplayers: ^5.2.1
+  lottie: ^3.1.2 
+  audioplayers: ^6.0.0 
 
-  # Funcionalidades
+  # Funcionalidades (VERSÕES ATUALIZADAS)
   provider: ^6.1.2
-  intl: 0.20.2
+  intl: 0.20.2 # <<< VERSÃO CORRIGIDA PARA SER COMPATÍVEL COM SEU SDK
   mask_text_input_formatter: ^2.9.0
   fl_chart: ^0.68.0
-  geolocator: ^11.1.0
+  geolocator: ^12.0.0 
   cupertino_icons: ^1.0.6
-  google_maps_flutter: ^2.10.1
-  flutter_map: ^6.1.0
-  latlong2: ^0.9.0
+  flutter_map: ^7.0.0 
+  latlong2: ^0.9.1 
   shimmer: ^3.0.0
-  percent_indicator: ^4.2.5
+  percent_indicator: ^4.2.3 
   image_picker: ^1.1.2 
-  firebase_storage: ^11.7.7
   permission_handler: ^11.3.1
   google_mlkit_text_recognition: ^0.15.0
-  http: ^1.4.0 
-  url_launcher: ^6.3.2
+  http: ^1.2.1 
+  url_launcher: ^6.3.0 
   google_sign_in: ^6.2.1
-  flutter_stripe: ^11.5.0
-  cloud_functions: ^4.7.1 
-  file_picker: ^8.0.0+1
+  flutter_stripe: ^11.0.0 
+  file_picker: ^8.0.3 
+  flutter_svg: ^2.0.10+1 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0 
 
 flutter:
   uses-material-design: true
   assets:
     - assets/images/
- 
