--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,14 +12,14 @@ dependencies:
   flutter_localizations: 
     sdk: flutter
 
-  # Firebase (VERSÕES ATUALIZADAS)
+  # Firebase
   firebase_core: ^3.15.1
   firebase_auth: ^5.6.2
   cloud_firestore: ^5.6.11
   firebase_storage: ^12.4.9
   cloud_functions: ^5.6.1
 
-  # UI e Estilo (VERSÕES ATUALIZADAS)
+  # UI e Estilo
   google_fonts: ^6.2.1
   flutter_animate: ^4.5.0
   flutter_spinkit: ^5.2.1
@@ -27,9 +27,9 @@ dependencies:
   lottie: ^3.1.2 
   audioplayers: ^6.0.0 
 
-  # Funcionalidades (VERSÕES ATUALIZADAS)
+  # Funcionalidades
   provider: ^6.1.2
-  intl: 0.20.2 # <<< VERSÃO CORRIGIDA PARA SER COMPATÍVEL COM SEU SDK
+  intl: ^0.20.2
   mask_text_input_formatter: ^2.9.0
   fl_chart: ^0.68.0
   geolocator: ^12.0.0 
@@ -46,7 +46,12 @@ dependencies:
   google_sign_in: ^6.2.1
   flutter_stripe: ^11.0.0 
   file_picker: ^8.0.3 
-  flutter_svg: ^2.0.10+1 
+  flutter_svg: ^2.0.10+1
+  
+  # MUDANÇA: Movido de dev_dependencies e adicionado 'js'
+  shared_preferences: ^2.2.3
+  js: ^0.7.1
+
 
 dev_dependencies:
   flutter_test:
