--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   flutter_stripe: ^11.0.0 
   file_picker: ^8.0.3 
   flutter_svg: ^2.0.10+1
+  animated_digit: ^3.2.2
+  syncfusion_flutter_charts: ^30.2.7
   
   # MUDANÇA: Movido de dev_dependencies e adicionado 'js'
   shared_preferences: ^2.2.3
